[package]
name = "cs_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
civm_rust_utils = { git = "git+ssh://git@github.com:/wyatt-A/civm_rust_utils.git", branch = "main" }
array-lib = { git = "https://git@github.com/wyatt-A/array-lib.git", features = ["io-cfl","io-nifti"] }
dft-lib = { git = "git+ssh://git@github.com:/wyatt-A/dft-lib.git" }
clap = { version = "4.5.3", features = ["derive"] }
itertools = "0.12.1"
ndarray = "0.15.6"
num-traits = "0.2.18"
rand = "0.10.1"
rayon = "1.9.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
num-complex = "0.4.6"
indicatif = "0.17.8"
bincode = "1.3.3"
